# django_stripe

./: .env  .env.example  .flake8  .gitignore  Dockerfile  Readme.md  docker-compose.yml  pyproject.toml  release_version.md
backend/base/: models.py
backend/config/: settings.py  urls.py  yasg.py
backend/financial_units/: admin.py  apps.py  models.py
backend/financial_units/migrations/: 0001_initial.py
backend/items/: admin.py  item_service.py  models.py  urls.py  views.py
backend/items/migrations/: 0001_initial.py  0002_item_currency.py
backend/items/templates/: item.html
backend/orders/: admin.py  models.py  urls.py
backend/orders/migrations/: 0001_initial.py
backend/payments/: urls.py  views.py
backend/service/: fixture.py  jwtToken.py  stripe_service.py
